force-app/main/default/objects/Case_Field_Values_Configuration__c/fields/Case_Nature__c.field-meta.xml
<CustomField>
    <fullName>Case_Nature__c</fullName>
    <label>Case Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCR</fullName>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
            <value>
                <fullName>EFT`s</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Account Maintenance</fullName>
            </value>
            <value>
                <fullName>Personal info update</fullName>
            </value>
            <value>
                <fullName>Apple Pay</fullName>
            </value>
            <value>
                <fullName>Official letter</fullName>
            </value>
            <value>
                <fullName>SWIFT</fullName>
            </value>
            <value>
                <fullName>Transaction Related</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Hassala</fullName>
            </value>
            <value>
                <fullName>Jamiyah</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>X-Pays</fullName>
            </value>
            <value>
                <fullName>QA_Activity</fullName>
            </value>
            <value>
                <fullName>On-Boarding</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Proactive Approach</fullName>
            </value>
            <value>
                <fullName>APP/Technical issue</fullName>
            </value>
            <value>
                <fullName>PLA</fullName>
            </value>
            <value>
                <fullName>Term Deposit</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Alkanz</fullName>
            </value>
            <value>
                <fullName>Fixed Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>