force-app/main/default/objects/Case_Field_Values_Configuration__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Activating EPP on specific transaction</fullName>
            </value>
            <value>
                <fullName>added through device&apos;s wallet</fullName>
            </value>
            <value>
                <fullName>added through ila application</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Amount Credited</fullName>
            </value>
            <value>
                <fullName>Amount Debited</fullName>
            </value>
            <value>
                <fullName>Application amendment</fullName>
            </value>
            <value>
                <fullName>Application Status Follow Up</fullName>
            </value>
            <value>
                <fullName>Archival Duplicate</fullName>
            </value>
            <value>
                <fullName>Archival Others</fullName>
            </value>
            <value>
                <fullName>Archival Stuck in OB stage</fullName>
            </value>
            <value>
                <fullName>Archival Underage</fullName>
            </value>
            <value>
                <fullName>Assisted customer until they accessed APP</fullName>
            </value>
            <value>
                <fullName>Balance Transferred -Issue</fullName>
            </value>
            <value>
                <fullName>Balance Transferred -Status</fullName>
            </value>
            <value>
                <fullName>By Bank - Compliance</fullName>
            </value>
            <value>
                <fullName>By Bank - Credit card collection</fullName>
            </value>
            <value>
                <fullName>By Bank - Fraud</fullName>
            </value>
            <value>
                <fullName>By Bank - Other</fullName>
            </value>
            <value>
                <fullName>By customer - Others</fullName>
            </value>
            <value>
                <fullName>By customer - Technical issues</fullName>
            </value>
            <value>
                <fullName>By customer -Customer Service</fullName>
            </value>
            <value>
                <fullName>By customer - Leaving country</fullName>
            </value>
            <value>
                <fullName>By customer -Products &amp; Services</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Card pick up from ila Bank</fullName>
            </value>
            <value>
                <fullName>Card Replacement - Damaged</fullName>
            </value>
            <value>
                <fullName>Card Replacement - Fraud</fullName>
            </value>
            <value>
                <fullName>Card Replacement - Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>