force-app/main/default/objects/Case_Field_Values_Configuration__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Closure</fullName>
            </value>
            <value>
                <fullName>Advance Payment</fullName>
            </value>
            <value>
                <fullName>ApplePay</fullName>
            </value>
            <value>
                <fullName>Archival</fullName>
            </value>
            <value>
                <fullName>Balance requires investigation</fullName>
            </value>
            <value>
                <fullName>Bank statement</fullName>
            </value>
            <value>
                <fullName>Block for both</fullName>
            </value>
            <value>
                <fullName>Block for credit</fullName>
            </value>
            <value>
                <fullName>Block for debit</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Card Control - CC</fullName>
            </value>
            <value>
                <fullName>Card Replacement fees</fullName>
            </value>
            <value>
                <fullName>Card Service</fullName>
            </value>
            <value>
                <fullName>Cash Collateral</fullName>
            </value>
            <value>
                <fullName>Cheque issuance</fullName>
            </value>
            <value>
                <fullName>Classic Fees</fullName>
            </value>
            <value>
                <fullName>Create Account</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Authority letter</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Direct Debit Settings</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Early Settlement</fullName>
            </value>
            <value>
                <fullName>Embassy referance letter</fullName>
            </value>
            <value>
                <fullName>EPP activation fees</fullName>
            </value>
            <value>
                <fullName>EPP early withdrawal</fullName>
            </value>
            <value>
                <fullName>Fees Reversal / Waivers</fullName>
            </value>
            <value>
                <fullName>Fixed Deposit early withdrawal</fullName>
            </value>
            <value>
                <fullName>Gaurdianship form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>